--- a/frontend/src/styles/Auth.css
+++ b/frontend/src/styles/Auth.css
@@ -1,6 +1,6 @@
 
   /* client/src/styles/Auth.css */
-  .auth-container {
+  /* .auth-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,4 +60,4 @@
   
   .auth-link a:hover {
     text-decoration: underline;
-  }
+  } */
